--- a/workspace/ims-client/package.json
+++ b/workspace/ims-client/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "datatables.net-se": "^1.10.16",
+    "jquery": "^3.2.1",
     "rxjs": "^5.1.0",
+    "semantic-ui": "^2.2.13",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
