--- a/workspace/ims-client/package.json
+++ b/workspace/ims-client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "datatables.net-se": "^1.10.16",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "rxjs": "^5.1.0",
     "semantic-ui": "^2.2.13",
