modified:   ../ims-client/package.json 	modified:   ../ims-client/src/app/app.module.ts 	modified:   ../ims-client/src/pages/message/message.ts 	modified:   src/main/java/th/co/baiwa/buckwaframework/common/config/SecurityConfig.java 	modified:   src/main/java/th/co/baiwa/buckwaframework/common/config/WebMvcConfig.java 	modified:   src/main/resources/application.properties 	modified:   src/main/resources/db_scripts/buckwa_framework.sql 	deleted:    src/main/resources/static/index.html 	../build_war.bat 	../ims-client/proxy.conf.json 	../ims-client/src/services/message.service.ts

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.profiles.active=@activatedProperties@
 # WEB PROPERTIES
 # ----------------------------------------
 # EMBEDDED SERVER CONFIGURATION
-server.context-path=/webpoc
-server.port=8084
+server.context-path=/ims-webapp
+#server.port=8084
 
 # ----------------------------------------
 # DATA PROPERTIES
