--- a/workspace/ims-webapp/src/test/resources/application-unittest.properties
+++ b/workspace/ims-webapp/src/test/resources/application-unittest.properties
@@ -10,3 +10,7 @@ spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 spring.datasource.url=jdbc:p6spy:mysql://localhost:3306/buckwa_framework?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.ldap.embedded.ldif=classpath:test-server.ldif
+spring.ldap.embedded.base-dn=dc=springframework,dc=org
+spring.ldap.embedded.port=8389
