--- a/workspace/ims-webapp/src/test/resources/application-unittest.properties
+++ b/workspace/ims-webapp/src/test/resources/application-unittest.properties
@@ -11,6 +11,10 @@ spring.datasource.url=jdbc:p6spy:mysql://localhost:3306/buckwa_framework?charact
 spring.datasource.username=root
 spring.datasource.password=root
 
+# ----------------------------------------
+# WEB PROPERTIES
+# ----------------------------------------
+# EMBEDDED LDAP
 spring.ldap.embedded.ldif=classpath:test-server.ldif
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
 spring.ldap.embedded.port=8389
