Restructure ldif file

--- a/workspace/ims-webapp/src/test/resources/application-unittest.properties
+++ b/workspace/ims-webapp/src/test/resources/application-unittest.properties
@@ -15,6 +15,6 @@ spring.datasource.password=root
 # WEB PROPERTIES
 # ----------------------------------------
 # EMBEDDED LDAP
-spring.ldap.embedded.ldif=classpath:test-server.ldif
+spring.ldap.embedded.ldif=classpath:embedded-ldap/test-server.ldif
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
 spring.ldap.embedded.port=8389
