--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/buckwa_framework?characterEnco
 #spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 #spring.datasource.url=jdbc:p6spy:mysql://localhost:3306/buckwa_framework?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root
 
 # ----------------------------------------
 # LOGGING PROPERTIES
