-wording -add input date-picker

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -16,11 +16,11 @@ server.context-path=/ims-webapp
 # ----------------------------------------
 # DATASOURCE
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/buckwa_framework?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/baiwa_dev?characterEncoding=UTF-8
 #spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 #spring.datasource.url=jdbc:p6spy:mysql://localhost:3306/buckwa_framework?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 # ----------------------------------------
 # LOGGING PROPERTIES
