--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -14,13 +14,21 @@ server.context-path=/ims-webapp
 # ----------------------------------------
 # DATA PROPERTIES
 # ----------------------------------------
-# DATASOURCE
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/baiwa_dev?characterEncoding=UTF-8
+
 #spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 #spring.datasource.url=jdbc:p6spy:mysql://localhost:3306/buckwa_framework?characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=
+
+# DATASOURCE MQSQL
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/baiwa_dev?characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=
+
+#
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@baiwa:1521:baiwadev
+spring.datasource.username=exciseadm
+spring.datasource.password=exciseadm
 
 # ----------------------------------------
 # LOGGING PROPERTIES
