commit for save will install windows

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -24,11 +24,17 @@ server.context-path=/ims-webapp
 #spring.datasource.username=root
 #spring.datasource.password=
 
-#
+# Data base Server
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@baiwa:1521:baiwadev
 spring.datasource.username=exciseadm
 spring.datasource.password=exciseadm
+
+# Data local oracle 
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+#spring.datasource.username=EXCISEADM
+#spring.datasource.password=EXCISEADM
 
 # ----------------------------------------
 # LOGGING PROPERTIES
