--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -26,15 +26,19 @@ server.context-path=/ims-webapp
 
 # Data base Server
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@baiwa:1521:baiwadev
+spring.datasource.url=jdbc:oracle:thin:@192.168.137.1:1521:excisedb
 spring.datasource.username=exciseadm
 spring.datasource.password=exciseadm
 
 # Data local oracle 
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 #spring.datasource.username=EXCISEADM
 #spring.datasource.password=EXCISEADM
+
+# Path for upload files
+app.datasource.path=/excise-upload/
 
 # ----------------------------------------
 # LOGGING PROPERTIES
