--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -33,9 +33,9 @@ spring.datasource.password=exciseadm
 # Data local oracle 
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-#spring.datasource.username=EXCISEADM
-#spring.datasource.password=EXCISEADM
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:baiwadev
+#spring.datasource.username=exciseadm
+#spring.datasource.password=exciseadm
 
 # Path for upload files
 app.datasource.path=/excise-upload/
