--- a/workspace/ims-client/package.json
+++ b/workspace/ims-client/package.json
@@ -24,6 +24,7 @@
         "core-js": "^2.4.1",
         "datatables.net-se": "^1.10.16",
         "font-awesome": "^4.7.0",
+        "google-charts": "^1.1.0",
         "jquery": "^3.2.1",
         "rxjs": "^5.1.0",
         "semantic-ui": "^2.2.13",
