--- a/workspace/ims-client/package.json
+++ b/workspace/ims-client/package.json
@@ -21,10 +21,10 @@
         "@angular/platform-browser": "^4.0.0",
         "@angular/platform-browser-dynamic": "^4.0.0",
         "@angular/router": "^4.0.0",
+        "chart.js": "^2.7.2",
         "core-js": "^2.4.1",
         "datatables.net-se": "^1.10.16",
         "font-awesome": "^4.7.0",
-        "google-charts": "^1.1.0",
         "jquery": "^3.2.1",
         "rxjs": "^5.1.0",
         "semantic-ui": "^2.2.13",
@@ -35,6 +35,7 @@
         "@angular/cli": "1.1.3",
         "@angular/compiler-cli": "^4.0.0",
         "@angular/language-service": "^4.0.0",
+        "@types/chartjs": "0.0.31",
         "@types/jasmine": "2.5.45",
         "@types/node": "~6.0.60",
         "codelyzer": "~3.0.1",
