--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -25,8 +25,14 @@ server.context-path=/ims-webapp
 #spring.datasource.password=
 
 # Data base Server
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@192.168.137.1:1521:excisedb
+#spring.datasource.username=exciseadm
+#spring.datasource.password=exciseadm
+
+# Data base Server `Baiwa`
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.137.1:1521:excisedb
+spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
 spring.datasource.username=exciseadm
 spring.datasource.password=exciseadm
 
