Commit Change CR Update

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 # PROFILES
 #spring.profiles.active=default
 spring.profiles.active=@activatedProperties@
+#spring.profiles.active=baiwa
 
 # ----------------------------------------
 # WEB PROPERTIES
