update ope04-1 upload file excel(POI) [backend]

--- a/workspace/ims-webapp/pom.xml
+++ b/workspace/ims-webapp/pom.xml
@@ -4,21 +4,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 		http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>th.go.excise</groupId>
 	<artifactId>ims-webapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	
+
 	<name>ims-webapp</name>
 	<description>Backend side for ims</description>
-	
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.8.RELEASE</version>
 	</parent>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -39,9 +39,9 @@
 		<!-- Plugin Version -->
 		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
 	</properties>
-	
+
 	<dependencies>
-		
+
 		<!-- Apache Commons -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -58,8 +58,9 @@
 			<artifactId>commons-io</artifactId>
 			<version>${commons.io.version}</version>
 		</dependency>
-		
-		<!-- Starter for building web, including RESTful, applications using Spring MVC. Uses Tomcat as the default embedded container -->
+
+		<!-- Starter for building web, including RESTful, applications using Spring 
+			MVC. Uses Tomcat as the default embedded container -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -70,14 +71,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
-		<!-- Starter for using Tomcat as the embedded servlet container. Default servlet container starter used by spring-boot-starter-web -->
+
+		<!-- Starter for using Tomcat as the embedded servlet container. Default 
+			servlet container starter used by spring-boot-starter-web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- Starter for using JDBC with the Tomcat JDBC connection pool -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -89,7 +91,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- Spring data JPA, default tomcat pool, exclude it -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -101,7 +103,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- Starter for building MVC web applications using Thymeleaf views -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -113,51 +115,52 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- Starter for using Spring Security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		
+
 		<!-- Spring Security LDAP -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-ldap</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.unboundid</groupId>
 			<artifactId>unboundid-ldapsdk</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<!-- Starter for testing Spring Boot applications with libraries including JUnit, Hamcrest and Mockito -->
+
+		<!-- Starter for testing Spring Boot applications with libraries including 
+			JUnit, Hamcrest and Mockito -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- Spring Security Test -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- Spring Boot Developer Tools -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<!-- Database -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>mysql</groupId> -->
-<!-- 			<artifactId>mysql-connector-java</artifactId> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>mysql</groupId> -->
+		<!-- <artifactId>mysql-connector-java</artifactId> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
@@ -168,26 +171,27 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<!-- DataSource -->
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 		</dependency>
-		
-		<!-- Gson: A Java serialization/deserialization library to convert Java Objects into JSON and back -->
+
+		<!-- Gson: A Java serialization/deserialization library to convert Java 
+			Objects into JSON and back -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
-        
+
 		<!-- Database Logging -->
 		<dependency>
 			<groupId>p6spy</groupId>
 			<artifactId>p6spy</artifactId>
 			<version>${p6spy.version}</version>
 		</dependency>
-		
+
 		<!-- Springfox Swagger2: JSON API documentation for spring based applications -->
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -199,7 +203,7 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${swagger.version}</version>
 		</dependency>
-		
+
 		<!-- JasperReports -->
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
@@ -288,7 +292,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- iText -->
 		<dependency>
 			<groupId>com.lowagie</groupId>
@@ -309,7 +313,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- Apache CXF Spring Boot Starter JAX-WS -->
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
@@ -322,16 +326,32 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- Apache CXF Advanced Logging Feature -->
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-features-logging</artifactId>
 			<version>${apache.cxf.version}</version>
 		</dependency>
-		
+
+		<!-- Used to work with the older excel file format - `.xls` -->
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.17</version>
+		</dependency>
+
+		<!-- Used to work with the newer excel file format - `.xlsx` -->
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
+
 	</dependencies>
-	
+
 	<repositories>
 		<repository>
 			<id>spring-plugins</id>
@@ -339,23 +359,25 @@
 			<url>http://repo.spring.io/plugins-release/</url>
 		</repository>
 	</repositories>
-	
+
 	<build>
-		
+
 		<!-- This is the name of the bundled project when it is finally built. -->
 		<finalName>${project.name}</finalName>
-		
-		<!-- List of resource elements that each describe what and where to include files associated with this project. -->
+
+		<!-- List of resource elements that each describe what and where to include 
+			files associated with this project. -->
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
-		
+
 		<plugins>
-			
-			<!-- Allowing to package executable jar or war archives and run an application "in-place" -->
+
+			<!-- Allowing to package executable jar or war archives and run an application 
+				"in-place" -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -372,8 +394,9 @@
 					</execution>
 				</executions>
 			</plugin>
-			
-			<!-- The Resources Plugin handles the copying of project resources to the output directory -->
+
+			<!-- The Resources Plugin handles the copying of project resources to 
+				the output directory -->
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<configuration>
@@ -397,7 +420,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -422,7 +445,7 @@
 					</nonFilteredFileExtensions>
 				</configuration>
 			</plugin>
-			
+
 			<!-- Apache CXF Code Generation Maven2 Plugins -->
 			<plugin>
 				<groupId>org.apache.cxf</groupId>
@@ -453,10 +476,10 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 		</plugins>
 	</build>
-	
+
 	<profiles>
 		<!-- DEV Environment -->
 		<profile>
@@ -487,5 +510,5 @@
 			</properties>
 		</profile>
 	</profiles>
-	
+
 </project>
