add report path and upload path to properties

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -48,7 +48,8 @@ spring.datasource.password=exciseadm
 #spring.datasource.password=exciseadm
 
 # Path for upload files
-app.datasource.path=/excise-upload/
+app.datasource.path.upload=/excise-upload/
+app.datasource.path.report=/excise-report/
 
 # ----------------------------------------
 # LOGGING PROPERTIES
