--- a/workspace/ims-webapp/src/test/resources/application-unittest.properties
+++ b/workspace/ims-webapp/src/test/resources/application-unittest.properties
@@ -7,10 +7,9 @@
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/buckwa_framework?characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:mysql://localhost:3306/buckwa_framework?characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root
-
+spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.137.1:1521:excisedb
+spring.datasource.username=exciseadm
+spring.datasource.password=exciseadm
 # ----------------------------------------
 # WEB PROPERTIES
 # ----------------------------------------
