--- a/workspace/ims-client/package.json
+++ b/workspace/ims-client/package.json
@@ -26,6 +26,7 @@
         "datatables.net-se": "^1.10.16",
         "font-awesome": "^4.7.0",
         "jquery": "^3.2.1",
+        "moment": "^2.22.2",
         "rxjs": "^5.1.0",
         "semantic-ui": "^2.2.13",
         "semantic-ui-calendar": "0.0.8",
